app/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: golden-app
  namespace: demo-app
  labels:
    app: golden-app
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: golden-app
  template:
    metadata:
      labels:
        app: golden-app
    spec:
      containers: 
        - name: golden-app
          image: docker.io/tanfulin/golden-pipeline-app:v0.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests: 
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
